# jirani_offline_library_backend

./: .dockerignore  .env.example  .gitignore  .graphifyignore  Dockerfile  README.md  docker-compose.yml  memory.md  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  check.py  config.py  database.py  main.py
app/api/: __init__.py  audio_router.py  auth.py  auth_router.py  book_router.py  publisher_router.py  tag_router.py  video_router.py
app/dependencies/: auth.py
app/models/: __init__.py  account.py  account_role.py  audio.py  audio_tag.py  book.py  book_tag.py  publisher.py  role.py  tag.py  video.py  video_tag.py
app/repositories/: __init__.py  audio_repo.py  book_repo.py  publisher_repo.py  tag_repo.py  video_repo.py
app/routes/: __init__.py  auth.py
app/schemas/: __init__.py  audio_schema.py  auth.py  auth_schema.py  auth_service.py  book_schema.py  publisher_schema.py  tag_schema.py  video_schema.py
app/scripts/: create_admin.py  create_test_users.py  test_reset_password.py
app/services/: auth_service.py  book_service.py
app/tests/: video_test.py
